Cannot access SMB shares
Affected version
- Nightly flatpak: Yes
- Other: Arch Linux 40.0-1
Steps to reproduce
- Open Files, click on 'Other locations'
- Attempt to connect to your SMB share
Current behavior
When attempting to connect to my local service (smb://192.168.x.x/), files appears to reload and does not establish a connection. Connect button is greyed out and all that is left in the connection bar is an 's' with a blue underline.
Expected behavior
Connect to SMB share and prompt for login
Additional information
sftp:// works
Edited by NSQY